Bug 1153056 - Fix about:webrtc to not blank on zero allocated PeerConnections. r=jesup, a=sledru